--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 		"tailwind": "npx tailwindcss -i ./src/input.css -o ./src/dist/output.css --watch"
 	},
 	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.6",
 		"tailwindcss": "^3.3.3"
 	}
 }
